--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,13 +44,6 @@ jobs:
         if: ${{ runner.os != 'Windows' }}
         run: chmod +x ./gradlew
 
-      - name: Read Properties
-        id: 'properties'
-        uses: christian-draeger/read-properties@1.1.1
-        with:
-          path: gradle.properties
-          properties: 'minecraft_version'
-
       - name: Set build number
         run: sed -i "s/undefined/$GITHUB_RUN_NUMBER/g" gradle.properties
 
@@ -92,7 +85,7 @@ jobs:
         with:
           name: GugleCarpetAddition ${{ steps.version.outputs.version }}
           version: ${{ steps.version.outputs.version }}
-          game-versions: ${{ steps.properties.outputs.minecraft_version }}
+          game-versions: 1.20.1
           version-type: release
           java: 17
           loaders: |
